# AR-floor

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  refactoring.py
.github/workflows/: lint.yml  linter.yml  run_tests.yml  test.yml
docs/: system-requirements.md
src/: run.py
src/config/: areas.py  directions.py  neighbours.py  states.py
src/database/: base.py
src/floor/: __init__.py  constants.py  layout.py  location.py  models.py
src/items/: Item.py  item.py
src/managers/: context.py  layout.py  main.py  path.py
src/paths/: pathfinder.py
src/robots/: constants.py  robot.py
src/shelves/: bin.py  constants.py  shelve.py  side.py
tests/: test_floor.py  test_layout_manager.py  test_main_manager.py  test_path_manager.py  test_pathfinder.py  test_robot.py  test_shelve.py
