[tool.poetry]
name = "ar-floor"
version = "0.1.0"
description = ""
authors = ["MarcGroc <marcgroc12@gmail.com>"]
readme = "README.md"
packages = [{include = "ar_floor"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.19"
pydantic = "^2.1.1"
pre-commit = "^3.3.3"
flake8 = "^6.1.0"
pytest = "^7.4.0"
matplotlib = "^3.7.2"
pathfinding = "^1.0.4"
pytest-mock = "^3.11.1"
loguru = "^0.7.2"
black = "^23.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
